# docs/openapi.json
@@ -4175,6 +4175,37 @@
         }
       }
     },
+    "/api/requisitions": {
+      "get": {
+        "summary": "GET /api/requisitions",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "201": {
+            "description": "Created"
+          },
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "422": {
+            "description": "Validation Error"
+          }
+        }
+      }
+    },
     "/api/requisitions/{id}/approve": {
       "post": {
         "summary": "POST /api/requisitions/:id/approve",
